Bug 218609 - Selecting text in an email and hitting reply results in a partial quote
Summary: Selecting text in an email and hitting reply results in a partial quote
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-14 08:53 UTC by Unknown
Modified: 2010-02-09 11:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2009-12-14 08:53:55 UTC
Version:           1.12.2 (using 4.3.1 (KDE 4.3.1) "release 6", openSUSE 11.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.31.5-0.1-default

When having received an email, selecting text inside the email preview part (I have it set to be under the list of emails for that folder) with the mouse, effectively highlighting it, then clicking reply, results in a quote of only the selected text.
I do not really know if this is a bug or expected behaviour, but when I click reply I would want it to be fully quoted.
Comment 1 Thomas McGuire 2009-12-14 14:41:04 UTC
That's the expected behavior, actually.
Comment 2 Thomas McGuire 2010-02-09 11:32:54 UTC
SVN commit 1087537 by tmcguire:

Add hidden option to disable quoting only the partial message when some text is selected.
GUI option will follow in a minute.

BUG: 218609
kolab/issue4097


 M  +5 -1      kmail.kcfg  
 M  +3 -1      kmmessage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1087537
Comment 3 Thomas McGuire 2010-02-09 11:43:32 UTC
SVN commit 1087540 by tmcguire:

Add GUI option to disable quoting only the selected text.

kolab/issue4097
CCBUG: 218609
MERGE: trunk


 M  +13 -0     configuredialog.cpp  
 M  +1 -0      configuredialog_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1087540