Add hidden option to disable quoting only the partial message when some text is selected. GUI option will follow in a minute.

BUG: 218609
kolab/issue4097

svn path=/branches/kdepim/enterprise/kdepim/; revision=1087537